# audiocomplib

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: wheels.yml
audiocomplib/: apply_gain_reduction.pyx  audio_compressor.py  audio_dynamics.py  peak_limiter.py  smooth_gain_reduction.pyx  smooth_gain_reduction_py.py
examples/: get_plot_transfer_curve.py  realtime_processing_pedalboard.py
tests/: test_audio_compressor.py  test_peak_limiter.py
