[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel>=0.45.1",
    "Cython>=3.0.12",
    "numpy>=2.2.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "audiocomplib"
version = "0.1.0"
description = "A Python library for audio dynamic compression and limiting"
authors = [{name = "Gdaliy Garmiza", email = "gdalik@gmail.com"}]
maintainers = [{name = "Gdaliy Garmiza", email = "gdalik@gmail.com"}]
license = {text = "MIT"}
dynamic = ["requires-python", "classifiers", "dependencies"]

[tool.setuptools]
packages = ["audiocomplib"]

[options]
python_requires = ">=3.9"
zip_safe = false
include_package_data = true
package_data = { "*" = ["*.pyx", "*.pxd"] }
test_suite = "tests"
tests_require = ["pytest"]

[extras]
dev = ["pytest", "sphinx"]
